Add smart sorting to the select dropdown directive that sorts active items on top

--- a/app/sass/components/modules/select.scss
+++ b/app/sass/components/modules/select.scss
@@ -74,6 +74,10 @@
                     right: 1em;
                 }
             }
+
+            &.placeholder {
+                border-bottom: $select-list-placeholder-border;
+            }
         }
 
         button {
