--- a/app/views/directives/select.html
+++ b/app/views/directives/select.html
@@ -1,10 +1,10 @@
-<button ng-click="toggle()" ng-class="{true: 'active'}[show]">
+<button ng-click="toggle()" ng-class="{'active': show}">
     <span>{{value}}</span><i class="fa fa-caret-down"></i>
 </button>
-<div class="select-dropdown ng-hide" ng-show="show" outside-click="hide()" ng-class="{true: 'paginated'}[hasMultiplePages]">
+<div class="select-dropdown ng-hide" ng-show="show" outside-click="hide()" ng-class="{'paginated': hasMultiplePages}">
     <button ng-show="hasMultiplePages" ng-disabled="currentPage === 0" ng-click="currentPage = currentPage-1"><i class="fa fa-caret-up"></i></button>
     <ul>
-        <li class="list-animate" ng-repeat="option in options | basicPagination: currentPage : maxItems" ng-click="select(option.key,option.value)" ng-class="{true: 'active'}[isActive(option.key)]">{{option.value}}</li>
+        <li class="list-animate" ng-repeat="option in options | basicPagination: currentPage : maxItems" ng-click="select(option.key,option.value)" ng-class="{'active': isActive(option.key), 'placeholder': option.key === null}">{{option.value}}</li>
     </ul>
     <button ng-show="hasMultiplePages" ng-disabled="!hasNext()" ng-click="currentPage = currentPage+1"><i class="fa fa-caret-down"></i></button>
 </div>
