--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <ul class="main-content-list ng-hide filter-2 appear-delayed" ng-show="available.storiesLoaded">
-    <li class="ic cl list-animate" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filter.set.keys | storybookTagFilter:available.filter.tag.keys | storybookPaginationFilter: available.currentPage : available.maxScenarios">
+    <li class="ic cl list-animate" ng-repeat="book in storybooks() | availableStorybookFilter:app.searchQuery:available.filter.set.keys:available.filter.tag.keys:available.currentPage:available.maxScenarios">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <div class="title">
                 <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <ul>
-            <li class="ic cl" ng-repeat="story in book.stories | storySearchFilter:app.searchQuery:book.id | storySetFilter:available.filter.set.keys | storyTagFilter:available.filter.tag.keys">
+            <li class="ic cl" ng-repeat="story in book.stories | availableStoryFilter:app.searchQuery:book.id:available.filter.set.keys:available.filter.tag.keys">
                 <div ng-class="{'active':available.selectedItem === 'story'+story.id}" ng-click="available.expandStory(book.id,story.id)">
                     <div class="title">
                         <i class="fa fa-caret-right"></i>
