Add support for user feedback and add tests for feedback and running scenarios

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'components/intro';
 @import 'components/preloader';
 @import 'components/layout';
+@import 'components/feedback';
 @import 'components/modules/top-filter';
 @import 'components/modules/content-list';
 @import 'components/modules/content-filter-list-headers';
