--- a/app/sass/theme/responsive.scss
+++ b/app/sass/theme/responsive.scss
@@ -20,6 +20,10 @@ $full-filter-size-bp-2:           new-breakpoint(max-width 94em);
         > .main {
             margin-left: $full-menu-min-size;
         }
+
+        > footer.feedback {
+            left: $full-menu-min-size;
+        }
     }
 }
 
@@ -36,6 +40,10 @@ $full-filter-size-bp-2:           new-breakpoint(max-width 94em);
 
         > .main {
             margin-left: $full-menu-max-size;
+        }
+
+        > footer.feedback {
+            left: $full-menu-max-size;
         }
     }
 }
