--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -128,6 +128,19 @@ div.layout {
     }
 }
 
+.feedback {
+
+    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
+
+    opacity: 1;
+
+    &.ng-hide {
+        opacity: 0;
+        height: 0;
+        overflow-y: hidden;
+    }
+}
+
 .select {
 
     button span {
