--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -9,7 +9,7 @@
         <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" placeholder="filter.tagPlaceholder" multiple="true" ng-hide="!filter.expand.tag" max-items="{{available.maxSelectItems}}"></div>
     </div>
     <div class="actions">
-        <button ng-click="run('all')">
+        <button ng-click="available.run('all')">
             <i class="fa fa-play"></i>
             <span translate="RUNNER.AVAILABLE.FILTER.RUN_ALL"></span>
         </button>
@@ -25,7 +25,7 @@
                 <span>{{ book.title }}</span>
             </div>
             <div class="actions">
-                <button ng-click="run('book',book.id)">
+                <button ng-click="available.run('book',book.id)">
                     <i class="fa fa-play"></i>
                     <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                 </button>
@@ -41,7 +41,7 @@
                         <span>{{ story.title }}</span>
                     </div>
                     <div class="actions">
-                        <button ng-click="run('story',story.id)">
+                        <button ng-click="available.run('story',story.id)">
                             <i class="fa fa-play"></i>
                             <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                         </button>
@@ -56,7 +56,7 @@
                                 <span>{{ scenario.title }}</span>
                             </div>
                             <div class="actions">
-                                <button ng-click="run('scenario',scenario.id)">
+                                <button ng-click="available.run('scenario',scenario.id)">
                                     <i class="fa fa-play"></i>
                                     <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                                 </button>
