Implement communication between modules including menu badges
- also fixes a timeout issue with user feedback and adjusts tests to work with the angular $timeout
- and splits up constants in separate files for better maintainability

--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -135,8 +135,28 @@ div.layout {
 
     &.ng-hide {
         opacity: 0;
-        height: 0;
-        overflow-y: hidden;
+        bottom: -$layout-feedback-height;
+    }
+
+    &.ng-hide-remove {
+        animation-name: feedback;
+        animation-duration: 1s;
+    }
+}
+
+.badge {
+
+    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
+    opacity: 1;
+
+    &.ng-hide {
+        opacity: 0;
+        font-size: 0;
+    }
+
+    &.ng-animate {
+        animation-name: badge;
+        animation-duration: 1s;
     }
 }
 
