--- a/app/sass/components/layout.scss
+++ b/app/sass/components/layout.scss
@@ -107,6 +107,7 @@ div.layout {
                 min-width: 1.6em;
                 text-align: center;
                 border-radius: .25em;
+                position: relative;
 
                 &:hover {
                     cursor: pointer;
@@ -134,6 +135,17 @@ div.layout {
                 i.writer:before {
                     content: '\f040';
                 }
+
+                .badge {
+                    position: absolute;
+                    top: .2em;
+                    right: .3em;
+                    padding: 0 .5em;
+                    background: $badge-bg-color;
+                    color: $badge-color;
+                    border-radius: $badge-radius;
+                    font-size: .4em;
+                }
             }
         }
 
@@ -145,6 +157,7 @@ div.layout {
                 @include pad($layout-menu-size/4 $layout-menu-size/2);
                 font-size: $layout-menu-size;
                 border-left: .3em solid $layout-side-bg-color;
+                position: relative;
 
                 &:hover,
                 &.active {
@@ -159,6 +172,17 @@ div.layout {
 
                 &.active {
                     border-color: $base-accent-color;
+                }
+
+                .badge {
+                    position: absolute;
+                    top: .43em;
+                    right: .3em;
+                    padding: 0 .5em;
+                    background: $badge-bg-color;
+                    color: $badge-color;
+                    border-radius: $badge-radius;
+                    font-size: .9em;
                 }
             }
         }
