--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -128,14 +128,15 @@ div.layout {
     }
 }
 
-.feedback {
+footer.feedback {
 
     @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
     opacity: 1;
+    height: $layout-feedback-height*1.1;
+    bottom: -$layout-feedback-height*.1;
 
     &.ng-hide {
         opacity: 0;
-        bottom: -$layout-feedback-height;
     }
 
     &.ng-hide-remove {
