Add subscribe, unsubscribe, connect and disconnect logic and reconnection feedback for the websocket

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -17,4 +17,4 @@
     </ul>
 </aside>
 <div class="main" ng-view></div>
-<footer ng-controller="FeedbackCtrl as fb" class="feedback" ng-class="fb.feedback.type" ng-show="fb.show"><span>{{fb.feedback.message}}</span><i class="fa fa-angle-down" ng-click="fb.hide()"></i></footer>
+<footer ng-controller="FeedbackCtrl as fb" class="feedback" ng-class="fb.feedback.type" ng-show="fb.show"><span>{{fb.feedback.message}}</span><i class="fa fa-times" ng-click="fb.hide()"></i></footer>
