Prepare for the implementation of the running section by adding navigation support to the menu

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -9,11 +9,11 @@
 </header>
 <aside class="ng-hide" ng-controller="MenuCtrl as menu" ng-show="menu.loaded">
     <ul class="modules">
-        <li ng-repeat="module in menu.modules" title="{{module.title}}" ng-class="{'active': module.active}"><i class="fa {{module.id | lowercase}}"></i><span class="badge" ng-show="module.badge > 0">{{module.badge}}</span></li>
+        <li ng-repeat="module in menu.modules" title="{{module.title}}" ng-click="go(module.url)" ng-class="{'active': module.active}"><i class="fa {{module.id | lowercase}}"></i><span class="badge" ng-show="module.badge > 0">{{module.badge}}</span></li>
     </ul>
     <h1>{{menu.activeModuleName}}</h1>
     <ul class="sections">
-        <li class="list-animate" ng-repeat="section in menu.sections" ng-class="{'active': section.active}"><span>{{section.title}}</span><span class="badge" ng-show="section.badge > 0">{{section.badge}}</span></li>
+        <li class="list-animate" ng-repeat="section in menu.sections" ng-click="go(section.url)" ng-class="{'active': section.active}"><span>{{section.title}}</span><span class="badge" ng-show="section.badge > 0">{{section.badge}}</span></li>
     </ul>
 </aside>
 <div class="main" ng-view></div>
