Add a base for the running stories section with a runningCtrl and a runningFilterCtrl

--- a/app/sass/components/modules/top-filter.scss
+++ b/app/sass/components/modules/top-filter.scss
@@ -5,6 +5,7 @@
     background: $section-header-bg-color;
     color: $section-header-color;
     white-space: nowrap;
+    padding-left: $section-list-text-pad;
 
     &.ic {
         padding-left: $section-list-icon-text-pad;
