--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -519,7 +519,8 @@ footer.feedback {
   max-height: 4em;
   background: #c4c4c4;
   color: #262626;
-  white-space: nowrap; }
+  white-space: nowrap;
+  padding-left: 0.53333em; }
   .top-filter.ic {
     padding-left: 3.51563em; }
   .top-filter > .filters {
@@ -900,6 +901,24 @@ button {
     margin-left: 17em; }
   div.layout > footer.feedback {
     left: 17em; } }
+@media screen and (max-width: 54em) {
+  .main-content-list.filter-1,
+  .top-filter.filter-1 {
+    min-width: 30em; }
+    .main-content-list.filter-1 .select button span,
+    .top-filter.filter-1 .select button span {
+      max-width: 6.66667em; }
+    .main-content-list.filter-1 .select button.active span,
+    .top-filter.filter-1 .select button.active span {
+      min-width: 6.66667em; }
+
+  .top-filter.filter-1 .filters > i {
+    display: inline-block; }
+    .top-filter.filter-1 .filters > i.show {
+      margin: 0.55556em -0.25em 0 0.25em; }
+  .top-filter.filter-1 .filters > span {
+    width: 0;
+    opacity: 0; } }
 @media screen and (max-width: 94em) {
   .main-content-list.filter-2,
   .top-filter.filter-2 {
