--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -17,8 +17,8 @@
         <div class="select" filter-select="available.environments" filter-id="available.filter.env.id" placeholder="available.envPlaceholder" synchronize="true" max-items="{{available.maxSelectItems}}"></div>
     </div>
 </div>
-<ul class="main-content-list ng-hide filter-2" ng-show="available.storiesLoaded">
-    <li class="ic cl list-animate" ng-repeat="book in filteredBooks = (storybooks() | availableStorybookFilter:app.searchQuery:available.filter.set.keys:available.filter.tag.keys:available.currentPage:available.maxScenarios)">
+<ul class="main-content-list filter-2">
+    <li class="ic cl list-animate" ng-repeat="book in filteredBooks = (storybooks() | storybookPaginationFilter:available.currentPage:available.maxScenarios)">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <div class="title">
                 <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <ul>
-            <li class="ic cl" ng-repeat="story in book.stories | availableStoryFilter:app.searchQuery:book.id:available.filter.set.keys:available.filter.tag.keys">
+            <li class="ic cl" ng-repeat="story in book.stories">
                 <div ng-class="{'active':available.selectedItem === 'story'+story.id}" ng-click="available.expandStory(book.id,story.id)">
                     <div class="title">
                         <i class="fa" ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}"></i>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <ul ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}">
-                    <li class="ic cl" ng-repeat="scenario in story.scenarios | scenarioTagFilter:story.tags:available.filter.tag.keys">
+                    <li class="ic cl" ng-repeat="scenario in story.scenarios">
                         <div ng-class="{'active':available.selectedItem === 'scenario'+scenario.id}" ng-click="available.selectedItem = 'scenario'+scenario.id">
                             <div class="title">
                                 <span>{{ scenario.title }}</span>
@@ -70,5 +70,5 @@
         </ul>
     </li>
 </ul>
-<h1 class="hero-notice ng-hide" translate="RUNNER.AVAILABLE.NO_STORIES" ng-show="available.storiesLoaded && filteredBooks.length === 0"></h1>
-<div pagination ng-show="available.storiesLoaded" class="pagination appear-delayed ng-hide" has-next="available.hasMorePages()" current-page="available.currentPage" list-ref="available.storyListRef" />
+<h1 class="hero-notice" translate="RUNNER.AVAILABLE.NO_STORIES" ng-show="filteredBooks.length === 0"></h1>
+<div pagination class="pagination appear-delayed" has-next="available.hasMorePages()" current-page="available.currentPage" list-ref="available.storyListRef" />
