--- a/app/views/runner/running.html
+++ b/app/views/runner/running.html
@@ -5,9 +5,17 @@
         <div class="select" filter-select="filter.environments" filter-id="running.filter.env.id" placeholder="filter.envPlaceholder" max-items="{{running.maxSelectItems}}"></div>
     </div>
 </div>
-<ul class="main-content-list ng-hide filter-1" ng-show="running.loaded">
-    <li class="ic cl list-animate" ng-repeat="run in filteredRuns = runs()">
-
+<ul class="main-content-list ng-hide filter-1">
+    <li class="ic cl list-animate" ng-repeat="run in filteredRuns = runs() track by run.id">
+        <div ng-class="{'active':running.selectedItem === 'run'+run.id}" ng-click="running.selectedItem = 'run'+run.id">
+            <div class="title">
+                <i class="fa fa-bars" data-toggle="collection"></i>
+                <span>{{ run.title }}</span>
+            </div>
+            <div class="comments">
+                <span>{{ run.startMsg }}</span>
+            </div>
+        </div>
     </li>
 </ul>
 <h1 class="hero-notice" translate="RUNNER.RUNNING.NO_RUNS" ng-show="runs().length === 0"></h1>
