--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -113,6 +113,8 @@ $content-list-item-1-font-size:         modular-scale($base-font-size, 1, $perfe
 $content-list-item-1-icon-size:         modular-scale($base-font-size, 1, $minor-seventh);
 $content-list-item-1-icon-top:          .4em;
 $content-list-item-1-icon-left:         1.25;
+$content-list-item-1-com-font-size:     $base-font-size;
+$content-list-item-1-com-color:         lighten($dark-gray, 25%);
 
 $content-list-2-button-margin-top:      .27em;
 $content-list-2-select-margin-top:      .17em;
